# dla_template

./: .gitignore  MY_README.md  README.md  pyproject.toml  setup_conformer.py  setup_lm_model.py  test.py  train.py
hw_asr/: requirements.txt
hw_asr/augmentations/spectrogram_augmentations/: __init__.py
hw_asr/augmentations/wave_augmentations/: __init__.py  gaussian_noise.py  time_stretch.py
hw_asr/collate_fn/: collate.py
hw_asr/config/: test.yaml  train.yaml
hw_asr/datasets/: __init__.py  base_dataset.py  common_voice.py  custom_audio_dataset.py  custom_dir_audio_dataset.py  librispeech_dataset.py  ljspeech_dataset.py
hw_asr/logger/: logger.py  wandb.py
hw_asr/loss/: CTCLossWrapper.py
hw_asr/metric/: __init__.py  base_metric.py  cer_metric.py  utils.py  wer_cer_metric.py  wer_metric.py
hw_asr/model/: __init__.py  baseline_model.py
hw_asr/model/conformer/: attention.py  block.py  convolution.py  encoder.py  feed_forward.py
hw_asr/tests/: config.yaml  python_path.py  test_dataloader.py  test_datasets.py  test_text_encoder.py
hw_asr/text_encoder/: ctc_char_text_encoder.py
hw_asr/trainer/: base_trainer.py  trainer.py
hw_asr/utils/: object_loading.py  util.py
