[tool.poetry]
name = "asr-hw"
version = "0.1.0"
description = "My ASR homework"
authors = ["Artur Gimranov"]
readme = "README.md"

packages = [
    { include = "hw_asr" }
]

[tool.poetry.dependencies]
python = ">=3.8"
torch = ">=1.11.0"
torchvision = ">=0.12.0"
torchaudio = ">=0.11.0"
numpy = "*"
tqdm = "*"
tensorboard = "*"
matplotlib = "*"
pandas = "*"
speechbrain = "*"
datasets = "*"
torch_audiomentations = "*"
editdistance = "*"
wandb = "*"
pyctcdecode = "*"
pillow = "*"
llvmlite = "0.40.0"
numba = "0.57.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
